test(utils): encryption and getEnvVar functions

--- a/.env.test
+++ b/.env.test
@@ -4,6 +4,7 @@ DB_PATH=':memory:'
 JWT_EXPIRY=30d
 JWT_SECRET=test-jwt-secret
 PORT=9000
+RPC_URL=https://agoric-rpc.polkachu.com
 SENDGRID_API_KEY=SG.test-api-key
 SENDGRID_FROM_EMAIL=noreply@noreply.com
 SENDGRID_CALLBACK_URL=https://localhost:9000/verify
