feat(notifiers): endpoints for notifier CRUD operations
- replace experimental fetch (v18) with axios for easier testing
- use mailgun instead of sendgrid (easier to get api key :) )
- update tests with new axios mocking

--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,7 @@ JWT_EXPIRY=30d
 JWT_SECRET=test-jwt-secret
 PORT=9000
 NETWORK_CONFIG_URL=https://main.agoric.net/network-config
-SENDGRID_API_KEY=SG.test-api-key
-SENDGRID_FROM_EMAIL=noreply@noreply.com
-SENDGRID_CALLBACK_URL=https://localhost:9000/verify
+EMAIL_API_KEY=test-api-key
+EMAIL_CALLBACK_URL=https://localhost:9000/verify
+EMAIL_FROM=noreply@test.com
+EMAIL_DOMAIN=test-mailgun-domain
