test: update tests + coverage report

--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
       "database/**",
       "**/*.sqlite"
     ]
+  },
+  "c8": {
+    "exclude": [
+      "src/lib/*.js",
+      "test/**/*.js"
+    ]
   }
 }
