--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "server",
+  "private": true,
   "version": "0.1.0",
   "description": "email notifications for vault collateralization levels",
   "main": "src/index.js",
