--- a/shared/package.json
+++ b/shared/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shared",
+  "private": true,
   "version": "0.1.0",
   "description": "shared, email notifications for vault collateralization levels",
   "main": "src/index.js",
