--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,12 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
+    "lint": "eslint src/**/*.js test/**/*.js",
     "test": "c8 ava 'test/**/test-*.js' --serial ",
     "test:watch": "ava 'test/**/test-*.js' -w --serial"
+  },
+  "engines": {
+    "node": ">=18.14.x"
   },
   "author": "0xPatrick <patrick@0xpatrick.dev> (https://0xpatrick.dev)",
   "license": "MIT",
@@ -31,6 +35,8 @@
   "devDependencies": {
     "ava": "^5.3.1",
     "c8": "^8.0.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-node": "^11.1.0",
     "sinon": "^15.2.0"
   },
   "ava": {
