feat(auth): configure cors, send jwt as a cookie

--- a/server/.env.test
+++ b/server/.env.test
@@ -3,9 +3,11 @@ BCRYPT_SECRET=test-bcrypt-secret
 DB_PATH=':memory:'
 JWT_EXPIRY=30d
 JWT_SECRET=test-jwt-secret
+JWT_COOKIE_NAME=interVaultsNotifier
+APP_DOMAIN=https://localhost:5173
 PORT=9000
 NETWORK_CONFIG_URL=https://main.agoric.net/network-config
 EMAIL_API_KEY=test-api-key
-EMAIL_CALLBACK_URL=https://localhost:9000/verify
+EMAIL_CALLBACK_URL=https://localhost:5173/verify
 EMAIL_FROM=noreply@test.com
 EMAIL_DOMAIN=test-mailgun-domain
