--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["../shared/*"]
+      "@shared/types": ["../shared/index.d.ts"]
     }
   },
   "include": ["server/*", "shared/*", "web/*"],
