--- a/shared/package.json
+++ b/shared/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "0.1.0",
   "description": "shared, email notifications for vault collateralization levels",
-  "main": "src/index.js",
+  "types": "index.d.ts",
+  "exports": {
+    "./index.d.ts": "./index.d.ts"
+  },
   "scripts": {
     "test": "void"
   },
