--- a/web/package.json
+++ b/web/package.json
@@ -11,18 +11,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@agoric/eventual-send": "^0.14.1",
+    "@agoric/notifier": "^0.6.2",
+    "@agoric/rpc": "^0.5.0",
+    "@agoric/store": "^0.9.2",
+    "@agoric/ui-components": "^0.8.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "react-router-dom": "^6.15.0",
+    "ses": "^0.18.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
+    "eslint-plugin-jsdoc": "^46.5.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   },
   "author": "0xPatrick <patrick@0xpatrick.dev> (https://0xpatrick.dev)",
