--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node src/server.js",
     "lint": "eslint src/**/*.js test/**/*.js",
-    "test": "c8 ava 'test/**/test-*.js' --serial ",
+    "test": "c8 ava 'test/**/test-*.js' --serial",
     "test:watch": "ava 'test/**/test-*.js' -w --serial"
   },
   "engines": {
@@ -28,7 +28,6 @@
     "@fastify/cors": "^8.3.0",
     "@fastify/jwt": "^7.2.0",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "fastify-plugin": "^4.5.1",
@@ -54,9 +53,8 @@
     ]
   },
   "c8": {
-    "exclude": [
-      "src/lib/*.js",
-      "test/**/*.js"
+    "include": [
+      "src/**/*.js"
     ]
   }
 }
