--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "lint": "eslint src/**/*.js test/**/*.js",
+    "lint": "eslint src/**/*.js test/**/*.js --report-unused-disable-directives --max-warnings 0",
     "test": "c8 ava 'test/**/test-*.js' --serial",
     "test:watch": "ava 'test/**/test-*.js' -w --serial"
   },
