--- a/server/package.json
+++ b/server/package.json
@@ -38,7 +38,8 @@
     "c8": "^8.0.1",
     "eslint": "^8.47.0",
     "eslint-plugin-node": "^11.1.0",
-    "sinon": "^15.2.0"
+    "sinon": "^15.2.0",
+    "@types/sinon": "^10.0.19"
   },
   "ava": {
     "nodeArguments": [],
