--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   "devDependencies": {
     "eslint": "^8.47.0"
   },
+  "resolutions": {
+    "@endo/compartment-mapper": "0.9.2",
+    "@endo/static-module-record": "0.8.2",
+    "ses": "0.18.8",
+    "**/ses": "0.18.8"
+  },
   "author": "0xPatrick <patrick@0xpatrick.dev> (https://0xpatrick.dev)",
   "license": "MIT"
 }
