--- a/server/package.json
+++ b/server/package.json
@@ -34,12 +34,12 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@types/sinon": "^10.0.19",
     "ava": "^5.3.1",
     "c8": "^8.0.1",
     "eslint": "^8.47.0",
     "eslint-plugin-node": "^11.1.0",
-    "sinon": "^15.2.0",
-    "@types/sinon": "^10.0.19"
+    "sinon": "^15.2.0"
   },
   "ava": {
     "nodeArguments": [],
