--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "ses": "0.18.8"
+    "ses": "^0.18.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.5",
